--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div class="card">
             <h5 class="card-header">la Biblia</h5>
             <div class="card-body">
-              <img src="im/los 10m.png" class="rounded mx-auto d-block" alt="..." width="450">
+              <img src="im/biblia.png" class="rounded mx-auto d-block" alt="..." width="450">
               <h5 class="card-title">La santa biblia</h5>
               <p class="card-text">un enlace a la santa biblia del antiguo y nuevo testamento</p>
               <a href="https://www.wordproject.org/bibles/sp/index.htm" class="btn btn-primary">has click aqui</a>
@@ -236,7 +236,7 @@
         <div class="card">
             <h5 class="card-header">los 10 mandamientos</h5>
             <div class="card-body">
-              <img src="im/biblia.jpg" class="rounded mx-auto d-block" alt="..." width="450">
+              <img src="im/los 10m.jpg" class="rounded mx-auto d-block" alt="..." width="450">
               <h5 class="card-title">Moises y los 10 mandamientos</h5>
               <p class="card-text">Un enlace a un video con referencia a los 10 mandamientos.</p>
               <a href="https://www.youtube.com/watch?v=RYppJPmIjnw" class="btn btn-primary">has click aqui</a>
